--- a/puppet_classes/grubby.html
+++ b/puppet_classes/grubby.html
@@ -160,12 +160,7 @@
       
         &mdash;
         <div class='inline'>
-<p>The kernel options that should be managed for the default kernel If ensure
-is not specified, present will be used (the other option being absent) If
-scope is not specified, DEFAULT will be used (valid options are also ALL or
-specific kernel) Example:  audit:  ensure: present  value: 1  scope:
-DEFAULT  audit_backlog_limit:  value: 8192  selinux:  ensure: absent 
-scope: ALL  enforcing:  ensure: absent</p>
+<p>The kernel options that should be managed for the default kernel If ensure is not specified, present will be used (the other option being absent) If scope is not specified, DEFAULT will be used (valid options are also ALL or specific kernel) Example:  audit:  ensure: present  value: 1  scope: DEFAULT  audit_backlog_limit:  value: 8192  selinux:  ensure: absent  scope: ALL  enforcing:  ensure: absent</p>
 </div>
       
     </li>
