--- a/index.html
+++ b/index.html
@@ -71,26 +71,22 @@
 <p><a href="#beginning-with-grubby">Beginning with grubby</a></p>
 </li></ul>
 </li><li>
-<p><a href="#usage">Usage - Configuration options and additional
-functionality</a></p>
+<p><a href="#usage">Usage - Configuration options and additional functionality</a></p>
 </li><li>
 <p><a href="#limitations">Limitations - OS compatibility, etc.</a></p>
 </li><li>
-<p><a href="#development">Development - Guide for contributing to the
-module</a></p>
+<p><a href="#development">Development - Guide for contributing to the module</a></p>
 </li></ol>
 
 <h2 id="label-Description">Description</h2>
 
-<p>The Grubby Puppet module allows for managing the GRUB configuration using
-Grubby</p>
+<p>The Grubby Puppet module allows for managing the GRUB configuration using Grubby</p>
 
 <h2 id="label-Setup">Setup</h2>
 
 <h3 id="label-What+grubby+affects">What grubby affects</h3>
 
-<p>This module can be used to manage the boot loader configuration like
-setting default kernel, add or remove kernel arguments.</p>
+<p>This module can be used to manage the boot loader configuration like setting default kernel, add or remove kernel arguments.</p>
 
 <p>It modifies mostly the files under /boot.</p>
 
@@ -109,8 +105,7 @@ setting default kernel, add or remove kernel arguments.</p>
 
 <h2 id="label-Limitations">Limitations</h2>
 
-<p>This module should work with all platforms that can use grubby for managing
-their configuration, but is primary developed for and tested on RHEL 8.</p>
+<p>This module should work with all platforms that can use grubby for managing their configuration, but is primary developed for and tested on RHEL 8.</p>
 
 <h2 id="label-Development">Development</h2>
 
@@ -126,12 +121,7 @@ their configuration, but is primary developed for and tested on RHEL 8.</p>
 <pre class="code ruby"><code class="ruby"><span class='id identifier rubyid_pdk'>pdk</span> <span class='id identifier rubyid_test'>test</span> <span class='id identifier rubyid_unit'>unit</span>
 </code></pre>
 
-<p>For details on how to add code comments and generate documentation with
-Strings, see the Puppet Strings <a
-href="https://puppet.com/docs/puppet/latest/puppet_strings.html">documentation</a>
-and <a
-href="https://puppet.com/docs/puppet/latest/puppet_strings_style.html">style
-guide</a></p>
+<p>For details on how to add code comments and generate documentation with Strings, see the Puppet Strings <a href="https://puppet.com/docs/puppet/latest/puppet_strings.html">documentation</a> and <a href="https://puppet.com/docs/puppet/latest/puppet_strings_style.html">style guide</a></p>
 
 <p>Preparation for release: Please check CONTRIBUTING.md</p>
 </div></div>
